Bug 2000774 - The text on the button for selecting a folder may wrap r=desktop-theme-reviewers,mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D273889

UltraBlame original commit: a879bb58421cebd7c190f791c2f63380cef2960d

--- a/toolkit/content/widgets/moz-input-folder/moz-input-folder.css
+++ b/toolkit/content/widgets/moz-input-folder/moz-input-folder.css
@@ -196,3 +196,17 @@ inline
 )
 ;
 }
+#
+choose
+-
+folder
+-
+button
+{
+white
+-
+space
+:
+nowrap
+;
+}
